--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "dependencies": {
-    "discord.js": "^14.16.3"
-  },
   "name": "discord-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {
-    "eslint": "^9.12.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "eslint": "^9.12.0"
+  }
 }
